--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Bot message with avatar and welcome text -->
       <div class="bot-message chat-message">
         <!-- Bot avatar image -->
-        <img src="imges/bot.png" class="avatar" alt="Bot Avatar">
+        <img src="bot.png" class="avatar" alt="Bot Avatar">
         <!-- Welcome message text -->
         <div id="chatbox">
           <div class="bot-message">Welcome to the AskBot, Feel free to ask questions or choose a suggested topic below.😊</div>
